# asafe

./: .gitignore  README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/data/: 00-asafe.hook
src/app/data/man/: asafe.1
src/app/include/: control.h  persistence.h
src/app/src/: control.cpp  main.cpp  persistence.cpp
src/app/test/: persistence.cpp
src/app/test/files/: time_normal
src/commons/: CMakeLists.txt
src/commons/include/: exceptions.h  logging.h  settings.h  types.h  utils.h
src/commons/src/: exceptions.cpp  logging.cpp  utils.cpp
src/commons/test/: logging.cpp  utils.cpp
src/system/: CMakeLists.txt
src/system/include/: mode.h  pacman.h
src/system/src/: mode.cpp  pacman.cpp
src/system/test/: mode.cpp  pacman.cpp
src/system/test/files/: mode_complain  pacman_custom_log.conf  pacman_default_log.conf
src/web/: CMakeLists.txt
src/web/include/: announce.h  http.h
src/web/src/: announce.cpp  http.cpp
src/web/test/: announce.cpp
